--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Presentación | Atlaz-White</title>
 		<link rel="stylesheet" href="./style.css">
+		<script src="./main.js"></script>
 	</head>
 	<body>
-		<h1>Hola, soy Atlaz White ;)</h1>
+		<h1>Hola, soy Atlaz White <span id="mod">;)</span></h1>
 	</body>
 </html>
