--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Presentación | Atlaz-White</title>
-		<link rel="stylesheet" href="./style.css">
-		<script src="./main.js"></script>
+		<title>Presentación</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+		<script type="text/javascript" src="./assets/js/main.js" defer></script>
 	</head>
 	<body>
-		<h1>Hola, soy Atlaz White <span id="mod">;)</span></h1>
+		<div>
+			<h1>Hola, soy Atlaz White</h1>
+			<span id="change">;)</span>
+		</div>
 	</body>
 </html>
